# hibayes

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/cybench/: dvc.yaml  get_csvs.py  main.py
examples/cybench/files/: config.yaml  config_s3data.yaml  data.csv  extractors.py
examples/gaia/: dvc.yaml
examples/gaia/files/: config.yaml  custom_checker.py  extractors.py
examples/hibayes-usecase1/: dvc.yaml
examples/hibayes-usecase1/files/: config.yaml  config_s3data.yaml  custom_extractor.py
experiments/: .gitignore  dvc.yaml
experiments/files/: config.yaml  extractor.py
src/hibayes/: analysis.py  analysis_state.py
src/hibayes/analyse/: __init__.py  _check.py  checker_config.py  checkers.py
src/hibayes/cli/: communicate.py  full.py  load.py  model.py
src/hibayes/communicate/: __init__.py  _communicate.py  communicate_config.py
src/hibayes/load/: __init__.py  extractors.py  load.py
src/hibayes/model/: __init__.py  fit.py  model.py
src/hibayes/platform/: __init__.py  config.py  setup.py
tests/: conftest.py  test_log_processor.py  test_model_config.py  test_model_config_yaml.py  test_models.py
tests/logs_1/: 2025-03-18T14-21-24+00-00_theory-of-mind_8zKwLcZJY872dKXo8GWXad.eval  2025-03-18T14-21-24+00-00_theory-of-mind_TZtKk4ZzmPhr2ERVLfZFwg.eval
tests/logs_2/: 2025-03-23T07-33-54+00-00_theory-of-mind_HU92rANzVKuCtKCxMQtEH5.json  2025-03-23T07-33-54+00-00_theory-of-mind_Ni69WThiZjH8AT9YvCMxcN.json
tests/model_configs/: change_prior.yaml  delete_re.yaml  interaction.yaml  two_models_same_class.yaml
(+18 files in other folders)
